--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <center>
-      <img src="IMG_142712.jpg" alt="" height="200" width="300">
+      <img src="IMG_142712" alt="" height="200" width="300">
     <h1>Aditya Sharma</h1>
     </center>
     <hr>
